# kf-ide

./: Cargo.toml  Program1.tac  Program4.asm
src/: app.rs  config.rs  document.rs  main.rs  menu_bar.rs  shortcuts.rs  splash.rs  translator.rs  ui_language.rs
src/app/: configWindow.rs  config_window.rs  menus.rs  symbol_analyzer.rs  tables.rs  ui.rs
src/code_editor/: mod.rs
src/panels/: bottom_panel.rs  central_panel.rs  mod.rs  right_panel.rs  top_panel.rs
src/syntax/: config_theme.rs  kf.rs  mod.rs
